[gd_scene load_steps=5 format=3 uid="uid://238f4tj7uuqs"]

[ext_resource type="Script" path="res://scripts/animated_button.gd" id="1_4pjmh"]
[ext_resource type="Script" path="res://scripts/levels/level_select.gd" id="1_7g13e"]
[ext_resource type="PackedScene" uid="uid://bb53neelkiux7" path="res://scenes/parallax_background.tscn" id="2_7kxwi"]
[ext_resource type="PackedScene" uid="uid://dcnk5ak1x2etg" path="res://scenes/objects/button_focus_player.tscn" id="3_0omlt"]

[node name="level_select" type="Node"]
script = ExtResource("1_7g13e")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_7kxwi")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -50.5
offset_right = 97.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="Tutorial" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Tutorial"
script = ExtResource("1_4pjmh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Row1" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Level1" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row1"]
layout_mode = 2
text = "Level 1"
script = ExtResource("1_4pjmh")

[node name="Level2" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row1"]
layout_mode = 2
text = "Level 2"
script = ExtResource("1_4pjmh")

[node name="Level3" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row1"]
layout_mode = 2
text = "Level 3"
script = ExtResource("1_4pjmh")

[node name="Row2" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Level4" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row2"]
layout_mode = 2
text = "Level 4"
script = ExtResource("1_4pjmh")

[node name="Level5" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row2"]
layout_mode = 2
text = "Level 5"
script = ExtResource("1_4pjmh")

[node name="Level6" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row2"]
layout_mode = 2
text = "Level 6"
script = ExtResource("1_4pjmh")

[node name="Back" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"
script = ExtResource("1_4pjmh")

[node name="Test" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
flat = true
script = ExtResource("1_4pjmh")

[node name="ButtonFocusPlayer" parent="." instance=ExtResource("3_0omlt")]
unique_name_in_owner = true

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row1/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row1/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row1/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row2/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row2/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Row2/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Test" to="." method="_on_test_pressed"]
